# forgecms

./: README.md  docker-compose.yaml
.github/workflows/: rust.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-4dea80762651771338e585ef99c9162ff093a9bf5177a97d81a627e4af2f027e.json  query-6c7f2ad22c6471fe724ddbfbf72f34789acce974efc741b5e8f889c5e3d0f528.json  query-9c582567550fb2e699ddc8fe0865e259f2862c68cdc5b16971511a065a79f2e6.json  query-bfdd82f4cd0394907908f3e13610ae6082f39da2f18b79a993252d81a1807382.json  query-e8633d67ae5f2efb300f4bb59628cde399d7b9f0442b185d52f1d8c2afc1ca3e.json  query-e970efd61e8092688c2aaca39d6ad983db3cbb9d27e547fb55f1ded17282b4d0.json  query-f29a3d291f7ef704285ee7ee52428af0a8dc9c18a06696c5b0151b78aa5823d7.json
backend/migrations/: 20240410111448_reviews.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/routes/: reviews.rs
backend/tests/: main.rs
