[package]
name = "forgecms"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Vareskic <valentin.vareskic@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
